feat: CRUD de modalidades en backend
