# backend-sigesa/backend-sigesa/storage/api-docs/api-docs.json
@@ -1267,143 +1267,6 @@
                 }
             }
         },
-        "/api/modalidades": {
-            "get": {
-                "tags": [
-                    "Modalidad"
-                ],
-                "summary": "Obtener todas las modalidades",
-                "operationId": "ea2750ff9728412ce32d2998be9f7d29",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "properties": {
-                                            "id": {
-                                                "type": "integer",
-                                                "example": 1
-                                            },
-                                            "codigo_modalidad": {
-                                                "type": "string",
-                                                "example": "CEUB"
-                                            },
-                                            "nombre_modalidad": {
-                                                "type": "string",
-                                                "example": "CEUB"
-                                            },
-                                            "descripcion_modalidad": {
-                                                "type": "string",
-                                                "example": "Descripción de la modalidad CEUB"
-                                            },
-                                            "id_usuario_updated_modalidad": {
-                                                "description": "ID del usuario que actualiza la modalidad (Foreign Key)",
-                                                "type": "integer",
-                                                "example": 1
-                                            },
-                                            "created_at": {
-                                                "type": "string",
-                                                "format": "date-time",
-                                                "example": "2023-02-23T00:09:16.000000Z"
-                                            },
-                                            "updated_at": {
-                                                "type": "string",
-                                                "format": "date-time",
-                                                "example": "2023-02-23T12:33:45.000000Z"
-                                            }
-                                        },
-                                        "type": "object"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Modalidad"
-                ],
-                "summary": "Crear una nueva modalidad",
-                "operationId": "b4c8e304f3b3308f9bd78a4ee3369e9a",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "codigo_modalidad": {
-                                        "type": "string",
-                                        "example": "MOD001"
-                                    },
-                                    "nombre_modalidad": {
-                                        "type": "string",
-                                        "example": "Modalidad Presencial"
-                                    },
-                                    "descripcion_modalidad": {
-                                        "type": "string",
-                                        "example": "Descripción de la modalidad presencial"
-                                    },
-                                    "id_usuario_updated_modalidad": {
-                                        "description": "ID del usuario que actualiza la modalidad",
-                                        "type": "integer",
-                                        "example": 1
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "CREATED",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "id": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "codigo_modalidad": {
-                                            "type": "string",
-                                            "example": "CEUB"
-                                        },
-                                        "nombre_modalidad": {
-                                            "type": "string",
-                                            "example": "CEUB"
-                                        },
-                                        "descripcion_modalidad": {
-                                            "type": "string",
-                                            "example": "Descripción de la modalidad CEUB"
-                                        },
-                                        "id_usuario_updated_modalidad": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "created_at": {
-                                            "type": "string",
-                                            "format": "date-time",
-                                            "example": "2023-02-23T00:09:16.000000Z"
-                                        },
-                                        "updated_at": {
-                                            "type": "string",
-                                            "format": "date-time",
-                                            "example": "2023-02-23T12:33:45.000000Z"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/subfases": {
             "get": {
                 "tags": [
@@ -1602,14 +1465,6 @@
         {
             "name": "Fase",
             "description": "Operaciones relacionadas con las fases del sistema de acreditación UMSS SIGESA",
-            "externalDocs": {
-                "description": "Documentación de la API",
-                "url": "https://github.com/borisangulo/Sistema-de-Acreditacion-UMSS-SIGESA/blob/main/backend-sigesa/backend-sigesa/README.md"
-            }
-        },
-        {
-            "name": "Modalidad",
-            "description": "Operaciones relacionadas con las modalidades del sistema de acreditación UMSS SIGESA",
             "externalDocs": {
                 "description": "Documentación de la API",
                 "url": "https://github.com/borisangulo/Sistema-de-Acreditacion-UMSS-SIGESA/blob/main/backend-sigesa/backend-sigesa/README.md"
